@@ -1,1 +1,1 @@
-set args -T 0 -O 127.0.0.1/8001/cgi
+set args -T 0 -C+x
